@@ -40,6 +40,7 @@ This release also includes changes from <<release-3-1-8, 3.1.8>>.
 * Improved GraphSON serialization performance around `VertexProperty`.
 * Changed some tests in `EventStrategyProcessTest` which were enforcing some unintended semantics around transaction state.
 * Added WsAndHttpChannelizer and SaslAndHttpBasicAuthenticationHandler to be allow for servicing Http and Websocket requests to the same server
+* Added deep copy of `Bytecode` to `DefaultTraversal.clone()`.
 
 [[release-3-2-5]]
 TinkerPop 3.2.5 (Release Date: June 12, 2017)
